--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,7 +3,7 @@
     <div>
         <a class="flex items-center gap-2" href="/">
             <img class="h-6" src="{% static 'images/logo.svg' %}" alt="Logo"/>
-            <span class="text-lg font-bold">{{ PROJECT_TITLE }}</span>
+            <span class="text-lg font-bold">{{ Rajat's Chat Application }}</span>
         </a>
     </div>
     <nav class="block relative">
